--- a/style.css
+++ b/style.css
@@ -1,10 +1,123 @@
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+  font-family: "Inter", sans-serif;
+  color: #ffffff;
+}
+
+h1 {
+  font-family: inherit;
+}
+
+*,
+*::before,
+*::after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+nav,
+footer,
+header,
+section {
+  display: block;
+}
+
+:focus,
+:active {
+  outline: none;
+}
+
+a,
+a:focus,
+a:active,
+a:visited,
+a:hover {
+  outline: none;
+  text-decoration: none;
+}
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+  font-size: 15px;
+  line-height: 25px;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+
+input,
+button,
+textarea {
+  font-family: inherit;
+}
+
+input::-ms-clear {
+  display: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+button::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+
+img {
+  vertical-align: top;
+}
+
 ._container {
   max-width: 1667px;
 }
 
-#triangle-topright {
-  width: 100;
-  height: 0;
-  border-top: 200px solid red;
-  border-left: 200px solid transparent;
+.hero {
+  font-family: "DM Sans", sans-serif;
+  width: 100%;
+  background-image: url("img/hero-back.png");
+  position: relative;
+}
+
+.hero__navbar {
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+}
+
+.navbar__logo {
+}
+
+.navbar__navbar-items {
+}
+
+.navbar-items {
+  font-size: 16px;
+}
+
+.navbar-items__item {
+  display: inline;
+}
+
+.navbar-items__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.button {
+}
+
+.hero__title {
+}
+.hero__subtitle {
+}
+.hero__image {
 }
