--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ body {
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  background-color: #f9f8ff;
 }
 
 input,
@@ -75,6 +76,10 @@ img {
 ._container {
   max-width: 1667px;
 }
+.container {
+  margin: 0 5% 0 15%;
+}
+
 .bg {
   width: 100%;
   -webkit-background-size: cover;
@@ -83,7 +88,7 @@ img {
   background-size: auto 100%;
 }
 
-.hero-bg {
+.hero__bg {
   background: url("img/hero/hero-back.png") no-repeat center center;
   padding: 264px 0;
   height: 100%;
@@ -156,7 +161,7 @@ img {
 
 .hero__title {
   text-align: center;
-  font-size: 68px;
+  font-size: 62px;
   font-weight: 500;
   line-height: 88px;
 }
@@ -176,7 +181,7 @@ img {
 
 .hero__image-block {
   margin-top: -40%;
-  margin-bottom: 184px;
+  margin-bottom: 5%;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -185,4 +190,58 @@ img {
 
 .hero__image {
   width: 90%;
+}
+
+.what-you-get {
+}
+
+.what-you-get__bg {
+  background: url("img/what-you-get/bg.png") no-repeat center center;
+  height: 600px;
+  background-size: 100% 100%;
+}
+
+.what-you-get__subtitle {
+  color: #3b3e43;
+  font-size: 48px;
+  font-weight: 500;
+  line-height: 60px;
+  width: 528px;
+  margin-bottom: 30px;
+}
+.what-you-get__cards {
+  display: flex;
+  gap: 30px;
+  flex-wrap: wrap;
+}
+.what-you-get_cards-card {
+  box-shadow: 0px 20px 50px 0px rgb(59, 62, 67, 0.05);
+  background-color: #ffffff;
+  border-radius: 15px;
+  padding: 40px 15px 0 45px;
+  width: 30%;
+}
+.card {
+}
+.card__icon {
+  height: 40px;
+  width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  margin-bottom: 15px;
+}
+.card__icon-pic {
+  width: 20px;
+}
+
+.card__title {
+  color: #595e64;
+  font-weight: 700;
+  margin-bottom: 15px;
+}
+.card__text {
+  color: #595e64;
+  margin-bottom: 50px;
 }
