--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ img {
 }
 .container {
   margin: 0 5% 0 15%;
+  height: fit-content;
 }
 
 .bg {
@@ -193,12 +194,13 @@ img {
 }
 
 .what-you-get {
+  height: fit-content;
 }
 
 .what-you-get__bg {
   background: url("img/what-you-get/bg.png") no-repeat center center;
-  height: 600px;
-  background-size: 100% 100%;
+  height: fit-content;
+  background-size: contain;
 }
 
 .what-you-get__title {
@@ -217,11 +219,13 @@ img {
   width: 528px;
   margin-bottom: 30px;
 }
+
 .what-you-get__cards {
   display: flex;
   gap: 30px;
   flex-wrap: wrap;
 }
+
 .what-you-get_cards-card {
   box-shadow: 0px 20px 50px 0px rgb(59, 62, 67, 0.05);
   background-color: #ffffff;
@@ -229,8 +233,10 @@ img {
   padding: 40px 15px 0 45px;
   width: 30%;
 }
+
 .card {
 }
+
 .card__icon {
   height: 40px;
   width: 40px;
@@ -252,4 +258,32 @@ img {
 .card__text {
   color: #595e64;
   margin-bottom: 50px;
+}
+
+.our-process {
+}
+
+.our-process__bg {
+  background: url("img/our-process/bg.png") no-repeat center center;
+  height: 600px;
+  background-size: 100% 100%;
+}
+
+.our-process__title {
+}
+.our-process__subtitle {
+}
+.our-process__subtext {
+}
+.our-process__cards {
+}
+.our-process__card {
+}
+.our-process__card-image {
+}
+.our-process__card-icon {
+}
+.our-process__card-title {
+}
+.our-process__card-desc {
 }
