--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   margin: 0;
   border: 0;
   font-family: "DM Sans", sans-serif;
+  font-style: normal;
   color: #ffffff;
 }
 
@@ -76,9 +77,11 @@ img {
 ._container {
   max-width: 1667px;
 }
+
 .container {
   margin: 0 5% 0 15%;
   height: fit-content;
+  justify-content: center;
 }
 
 .bg {
@@ -195,6 +198,7 @@ img {
 
 .what-you-get {
   height: fit-content;
+  margin-bottom: 10%;
 }
 
 .what-you-get__bg {
@@ -224,6 +228,7 @@ img {
   display: flex;
   gap: 30px;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .what-you-get_cards-card {
@@ -233,8 +238,9 @@ img {
   padding: 40px 15px 0 45px;
   width: 30%;
 }
-
 .card {
+  min-width: 300px;
+  max-width: 30%;
 }
 
 .card__icon {
@@ -265,25 +271,64 @@ img {
 
 .our-process__bg {
   background: url("img/our-process/bg.png") no-repeat center center;
-  height: 600px;
+  height: fit-content;
   background-size: 100% 100%;
+  justify-content: center;
 }
 
 .our-process__title {
+  padding-top: 160px;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 122%;
+  opacity: 0.5;
+  text-align: center;
 }
+
 .our-process__subtitle {
+  padding-top: 14px;
+  font-size: 48px;
+  font-weight: 500;
+  line-height: 122%;
+  text-align: center;
 }
+
 .our-process__subtext {
+  padding-top: 24px;
+  font-size: 20px;
+  line-height: 34px;
+  font-weight: 400;
+  text-align: center;
 }
+
 .our-process__cards {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  margin-top: 32px;
 }
 .our-process__card {
+  background-color: #ffffff;
+  padding: 40px;
+  border-radius: 15px;
+  display: flex;
 }
+
 .our-process__card-image {
+  width: 40%;
+}
+.our-process__card-image_pic {
+  width: 100%;
+}
+.our-process__card-text {
+  width: 60%;
 }
 .our-process__card-icon {
 }
 .our-process__card-title {
+  color: #3b3e43;
 }
 .our-process__card-desc {
+  color: #595e64;
 }
