--- a/style.css
+++ b/style.css
@@ -296,10 +296,12 @@ img {
 
 .our-process__subtext {
   padding-top: 24px;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 34px;
-  font-weight: 400;
+  font-weight: 300;
   text-align: center;
+  width: 600px;
+  margin: 0 auto;
 }
 
 .our-process__cards {
@@ -313,6 +315,7 @@ img {
   padding: 40px;
   border-radius: 15px;
   display: flex;
+  gap: 68px;
 }
 
 .our-process__card-image {
@@ -325,10 +328,28 @@ img {
   width: 60%;
 }
 .our-process__card-icon {
+  margin-top: 36px;
+  margin-bottom: 24px;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
 }
+
 .our-process__card-title {
   color: #3b3e43;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 30px;
+  margin-bottom: 12px;
 }
 .our-process__card-desc {
   color: #595e64;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px;
 }
