--- a/style.css
+++ b/style.css
@@ -278,6 +278,7 @@ img {
 
 .our-process__title {
   padding-top: 160px;
+
   text-transform: uppercase;
   font-size: 12px;
   font-weight: 700;
@@ -309,6 +310,7 @@ img {
   flex-direction: column;
   gap: 40px;
   margin-top: 32px;
+  padding-bottom: 184px;
 }
 .our-process__card {
   background-color: #ffffff;
