Start-working css

--- a/style.css
+++ b/style.css
@@ -548,3 +548,22 @@ img {
 .start-working__chart-img {
   width: 500px;
 }
+
+.footer {
+}
+.footer__navbar {
+}
+.footer__logo {
+}
+.footer__links {
+}
+.footer__social-media-links {
+}
+.footer__credentials {
+}
+.footer_copyright {
+}
+.footer__privacy-links {
+}
+.footer__privacy-link {
+}
