--- a/style.css
+++ b/style.css
@@ -244,7 +244,13 @@ img {
 }
 
 .hero_button {
-  margin: 41 auto;
+  margin: 41 auto 15vh;
+}
+
+@media only screen and (max-device-width: 480px) {
+  .hero_button {
+    margin: 41 auto 10vh;
+  }
 }
 
 @media only screen and (max-device-width: 480px) {
@@ -260,7 +266,7 @@ img {
 }
 
 .hero__image-block {
-  margin-top: -300px;
+  margin-top: -400px;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -268,7 +274,7 @@ img {
 }
 
 .hero__image {
-  width: 90%;
+  width: 110%;
 }
 
 .what-you-get {
@@ -627,6 +633,7 @@ img {
   align-items: center;
   line-height: 80px;
   border-bottom: 1px solid #ffffff;
+  gap: 30px;
 }
 
 .footer__logo {
