--- a/style.css
+++ b/style.css
@@ -242,11 +242,26 @@ img {
     width: 200px;
     padding: 50px;
     padding-top: 125px;
-    background: #ededed;
+    background: #ffffff;
     list-style-type: none;
     transform-origin: 0% 0%;
     transform: translateX(-100%);
     transition: transform 0.5s ease-in-out;
+  }
+
+  .navbar-items__item {
+    color: #57b3fe;
+  }
+  .hero__burger-lines-check {
+    display: block;
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 2;
   }
 
   .hero__burger-lines {
@@ -258,11 +273,26 @@ img {
 
   .hero__burger-line {
     display: block;
-    width: 33px;
-    height: 4px;
-    margin-bottom: 5px;
-    background: #cdcdcd;
+    width: 50px;
+    height: 8px;
+    margin-bottom: 8px;
+    background: #ffffff;
     border-radius: 3px;
+    z-index: 1;
+    transform-origin: 4px 0px;
+    transition: transform 0.5s ease, background 0.5s ease, opacity 0.55s ease;
+  }
+
+  .hero__burger-lines:first-child {
+    transform-origin: 0% 0%;
+  }
+
+  .hero__burger-lines:nth-last-child(2) {
+    transform-origin: 0% 100%;
+  }
+
+  .hero__burger-lines-check:checked ~ .navbar-items {
+    transform: translateX(0);
   }
 }
 
