--- a/style.css
+++ b/style.css
@@ -239,19 +239,25 @@ img {
     position: absolute;
     top: -100px;
     left: 0;
-    width: 200px;
-    padding: 50px;
-    padding-top: 125px;
+    width: 400px;
+    padding: 220px 50px 20px 135px;
+    z-index: 0;
     background: #ffffff;
     list-style-type: none;
     transform-origin: 0% 0%;
     transform: translateX(-100%);
     transition: transform 0.5s ease-in-out;
+    border-bottom-right-radius: 15px;
+    box-shadow: rgb(0 0 0 / 15%) 1.95px 1.95px 2.6px;
   }
 
   .navbar-items__item {
     color: #57b3fe;
+    font-size: 200%;
+    margin-bottom: 20px;
+    display: block;
   }
+
   .hero__burger-lines-check {
     display: block;
     width: 100px;
@@ -261,7 +267,7 @@ img {
     left: 0;
     cursor: pointer;
     opacity: 0;
-    z-index: 2;
+    z-index: 3;
   }
 
   .hero__burger-lines {
@@ -269,6 +275,7 @@ img {
     position: absolute;
     top: 50px;
     left: 30px;
+    z-index: 2;
   }
 
   .hero__burger-line {
@@ -278,21 +285,25 @@ img {
     margin-bottom: 8px;
     background: #ffffff;
     border-radius: 3px;
-    z-index: 1;
+    z-index: 2;
     transform-origin: 4px 0px;
     transition: transform 0.5s ease, background 0.5s ease, opacity 0.55s ease;
   }
 
-  .hero__burger-lines:first-child {
-    transform-origin: 0% 0%;
-  }
-
-  .hero__burger-lines:nth-last-child(2) {
-    transform-origin: 0% 100%;
-  }
-
   .hero__burger-lines-check:checked ~ .navbar-items {
     transform: translateX(0);
+  }
+
+  .hero__burger-lines-check:checked ~ .hero__burger-lines .hero__burger-line {
+    background-color: #57b3fe;
+    transform: rotate(45deg) translate(-2px, -1px);
+  }
+
+  .hero__burger-lines-check:checked
+    ~ .hero__burger-lines
+    .hero__burger-line:nth-last-child(3) {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
   }
 }
 
