--- a/style.css
+++ b/style.css
@@ -76,9 +76,14 @@ img {
 
 .container {
   max-width: 1170px;
-  padding: 0 50px;
   margin: 0 auto;
   height: fit-content;
+}
+
+@media only screen and (max-device-width: 480px) {
+  .container {
+    padding: 0 30px;
+  }
 }
 
 .bg {
@@ -94,7 +99,6 @@ img {
 }
 
 .title__center {
-  padding-top: 160px;
   text-align: center;
 }
 
@@ -222,6 +226,7 @@ img {
 .hero__burger-lines-check {
   display: none;
 }
+
 .hero__burger-lines {
   display: none;
 }
@@ -314,11 +319,6 @@ img {
     transform: rotate(-45deg) translate(-4px, -1px);
   }
 
-  .hero__burger-lines-check:checked
-    ~ .hero__burger-lines
-    .hero__burger-line:nth-last-child(1) {
-  }
-
   .hero__burger-lines-check:checked ~ .hero__burger-lines .hero__burger-line {
     background-color: #57b3fe;
   }
@@ -375,53 +375,51 @@ img {
 }
 
 .hero__image {
-  width: 110%;
+  width: 100%;
 }
 
-.what-you-get {
+.what_you_get {
   height: fit-content;
   margin-bottom: 10%;
 }
 
-.what-you-get__bg {
-  background: url("img/what-you-get/bg.png") no-repeat center center;
+.what_you_get__bg {
+  background: url("img/what_you_get/bg.png") no-repeat center center;
   height: fit-content;
   background-size: contain;
   justify-content: center;
 }
 
-.what-you-get__subtitle {
+.what_you_get__subtitle {
   width: 528px;
   margin-bottom: 30px;
 }
 
-.what-you-get__cards {
+.what_you_get_cards {
   display: flex;
-  gap: 30px;
+  gap: 24px;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
 @media only screen and (max-device-width: 480px) {
-  .what-you-get__cards {
+  .what_you_get_cards {
     flex-direction: column;
   }
 }
 
-.what-you-get_cards-card {
-  box-shadow: 0px 20px 50px 0px rgb(59, 62, 67, 0.05);
+.what_you_get_cards__card {
+  box-shadow: 0px 15px 50px 0px rgb(59, 62, 67, 0.05);
   background-color: #ffffff;
   border-radius: 15px;
-  padding: 40px 15px 0 45px;
-}
-
-.card {
   min-width: 300px;
-  max-width: 30%;
+  max-width: 31%;
+  padding: 50px 15px 50px 40px;
 }
 
 @media only screen and (max-device-width: 480px) {
-  .card {
+  .what_you_get_cards__card {
+    min-width: 100%;
     max-width: 100%;
     margin: 0 auto;
   }
@@ -437,7 +435,7 @@ img {
   margin-bottom: 15px;
 }
 
-.card__icon-pic {
+.card__icon_pic {
   width: 20px;
 }
 
@@ -449,7 +447,7 @@ img {
     margin-bottom: 35px;
   }
 
-  .card__icon-pic {
+  .card__icon_pic {
     width: 60px;
   }
 }
@@ -458,73 +456,76 @@ img {
   margin-bottom: 15px;
 }
 
-.card__title-text {
+.card__title_text {
   color: #595e64;
   font-weight: 700;
+  font-size: 22px;
+  line-height: 30px;
 }
 
-.card__desc {
-  margin-bottom: 50px;
-  width: 95%;
-}
-
-.card__desc-text {
+.card__desc_text {
   color: #595e64;
+  font-size: 16px;
+  line-height: 24px;
 }
 
 @media only screen and (max-device-width: 480px) {
-  .card__title-text {
+  .card__title_text {
     font-size: 200%;
   }
 
-  .card__desc-text {
+  .card__desc_text {
     font-size: 200%;
     line-height: 120%;
   }
 }
 
-.our-process__bg {
-  background: url("img/our-process/bg.png") no-repeat center center;
+.bold {
+  all: inherit;
+  font-weight: bold;
+}
+
+.our_process__bg {
+  background: url("img/our_process/bg.png") no-repeat center center;
   height: fit-content;
   background-size: 100% 100%;
   justify-content: center;
+  padding: 160px 0 184px;
 }
 
-.our-process__subtitle {
-  padding-top: 14px;
+.our_process__subtitle {
   text-align: center;
 }
 
-.our-process__desc {
+.our_process__desc {
   padding-top: 24px;
   margin: 0 auto;
   text-align: center;
   width: 720px;
+  margin-bottom: 32px;
 }
 
-.our-process__desc-text {
+.our_process__desc_text {
   font-size: 20px;
   line-height: 34px;
   font-weight: 400;
 }
 
 @media only screen and (max-device-width: 480px) {
-  .our-process__subtext {
+  .our_process__subtext {
     font-size: 200%;
     line-height: 120%;
     width: 800px;
   }
 }
 
-.our-process__cards {
+.our_process__cards {
   display: flex;
   flex-direction: column;
   gap: 40px;
-  margin-top: 32px;
-  padding-bottom: 184px;
 }
 
-.our-process__card {
+.our_process__card {
   background-color: #ffffff;
   padding: 40px;
   border-radius: 15px;
@@ -532,19 +533,19 @@ img {
   gap: 68px;
 }
 
-.our-process__card-image {
+.our_process__card_image {
   width: 40%;
 }
 
-.our-process__card-image_pic {
+.our_process__card_image_pic {
   width: 100%;
 }
 
-.our-process__card-text {
+.our_process__card_text {
   width: 60%;
 }
 
-.our-process__card-icon {
+.our_process__card_icon {
   margin-top: 36px;
   margin-bottom: 24px;
   width: 40px;
@@ -555,11 +556,11 @@ img {
   border-radius: 10px;
 }
 
-.our-process__card-title {
+.our_process__card_title {
   margin-bottom: 12px;
 }
 
-.our-process__card-title-text {
+.our_process__card_title_text {
   color: #3b3e43;
   font-style: normal;
   font-weight: bold;
@@ -567,7 +568,7 @@ img {
   line-height: 30px;
 }
 
-.our-process__card-desc-text {
+.our_process__card_desc_text {
   color: #595e64;
   font-style: normal;
   font-weight: normal;
@@ -576,39 +577,39 @@ img {
 }
 
 @media only screen and (max-device-width: 480px) {
-  .our-process__card {
+  .our_process__card {
     flex-direction: column;
     gap: 30px;
   }
 
-  .our-process__card-image {
+  .our_process__card_image {
     display: flex;
     justify-content: center;
     width: 100%;
   }
 
-  .our-process__card-image_pic {
+  .our_process__card_image_pic {
     width: 90%;
   }
 
-  .our-process__card-text {
+  .our_process__card_text {
     width: 100%;
   }
 
-  .our-process__card-icon {
+  .our_process__card_icon {
     display: none;
   }
 
-  .our-process__card-title {
+  .our_process__card_title {
     text-align: center;
   }
 
-  .our-process__card-title-text {
+  .our_process__card_title_text {
     font-size: 200%;
     line-height: 120%;
   }
 
-  .our-process__card-desc-text {
+  .our_process__card_desc_text {
     font-size: 200%;
     line-height: 140%;
   }
@@ -692,7 +693,7 @@ img {
   margin-bottom: 10px;
 }
 
-.start-working__desc-text {
+.start-working__desc_text {
   font-weight: normal;
   font-size: 16px;
   line-height: 34px;
