--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ img {
 .title__white {
   text-transform: uppercase;
   font-size: 12px;
-  font-weight: 700;
+  font-weight: 500;
   line-height: 122%;
   opacity: 0.5;
 }
@@ -150,7 +150,7 @@ img {
   justify-content: center;
 }
 
-@media only screen and (max-device-width: 1023px) {
+@media only screen and (min-device-width: 1023px) {
   .hero__bg {
     padding: 120px 0 264px;
   }
@@ -177,6 +177,32 @@ img {
 
 .navbar__logo {
   width: 259px;
+}
+
+@media screen and (max-device-width: 1281px) {
+  .navbar {
+    justify-content: center;
+  }
+}
+
+.navbar_items-medium_screens {
+  display: none;
+}
+
+@media screen and (max-device-width: 1281px) and (min-device-width: 913px) {
+  .navbar_items {
+    display: none;
+  }
+
+  .navbar {
+    justify-content: space-between;
+  }
+
+  .navbar_items-medium_screens {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+  }
 }
 
 .navbar_items__item {
@@ -726,9 +752,10 @@ img {
 
 .start_working__left_right {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   padding: 120px 0 80px;
+  width: 100%;
 }
 
 .start_working__left {
@@ -738,11 +765,11 @@ img {
 }
 
 .start_working__subtitle {
-  width: 400px;
+  max-width: 400px;
 }
 
 .start_working__desc {
-  width: 400px;
+  max-width: 400px;
   margin-bottom: 10px;
 }
 
@@ -753,10 +780,10 @@ img {
 }
 
 .start_working__chart_img {
-  width: 350px;
+  width: 750px;
 }
 
-@media only screen and (max-device-width: 480px) {
+@media only screen and (max-device-width: 1279px) {
   .start_working__left_right {
     flex-direction: column-reverse;
     gap: 20px;
